<resources>
    <string name="app_name">Toypic</string>
    <string name="splash_logo">Logo\n서비스 대표 문구</string>
    <string name="cd_app_logo">App Main Logo</string>
    <string name="cd_main_search">Content Search</string>
    <string name="cd_main_btn">Go Main</string>
    <string name="cd_category_btn">Go Category</string>
    <string name="cd_evaluate_btn">Go Evaluate</string>
    <string name="cd_ranking_btn">Go Ranking</string>
    <string name="cd_my_page_btn">Go MyPage</string>
    <string name="cd_design_img">none</string>
    <string name="cd_product_default">기본 상품 이미지</string>
    <string name="cd_product_new">신규 표기</string>
    <string name="cd_like_img">좋아요 이미지</string>
    <string name="cd_more_btn">더보기 이미지</string>
    <string name="cd_back_btn">Return back</string>
    <string name="cd_banner_img">Banner image</string>
    <string name="cd_kakao_login">카카오 로그인 버튼</string>
    <string name="btn_dummy">내용 없음</string>
    <string name="btn_home">홈화면</string>
    <string name="btn_category">카테고리</string>
    <string name="btn_evaluate">평가</string>
    <string name="btn_ranking">랭킹</string>
    <string name="btn_mypage">마이페이지</string>
    <string name="btn_rank_total">전체</string>
    <string name="btn_rank_boy">남아 완구</string>
    <string name="btn_rank_girl">여아 완구</string>
    <string name="btn_rank_baby">영유아 완구</string>
    <string name="btn_rank_board">교육 보드</string>
    <string name="btn_rank_outdoor">아웃도어</string>
    <string name="btn_rank_lego">레고</string>
    <string name="btn_rank_stuffedtoy">봉제인형</string>
    <string name="btn_rank_character">캐릭터</string>
    <string name="btn_ad_current">00</string>
    <string name="btn_ad_page_slicer">/</string>
    <string name="txt_category_brand">브랜드</string>
    <string name="txt_null">%s</string>
    <string name="txt_loading00">로딩 중…</string>
    <string name="txt_permission_reason">사용자 맞춤 상품 추천 및 상품 쿠폰 발송 등을 위해서는 동의가 필요합니다.</string>
    <string name="txt_permission_granted">앱 관련 권한이 설정 되었습니다</string>
    <string name="txt_permission_denied">앱 관련 권한이 거부 되었습니다</string>
    <string name="txt_main_custom_toy">%s님을 위한 맞춤 장난감</string>
    <string name="txt_main_new_toy">새로 나온 장난감</string>
    <string name="txt_main_ranking_toy">분야별 랭킹</string>
    <string name="txt_main_review_toy">인기 리뷰</string>
    <string name="txt_main_custom_product_name1">특가상품 헬로카봇 구급차 댄디 옐로우 테스트 텍스트</string>
    <string name="txt_main_new_product_name1">자석퍼즐 신비아파트3 더블X 신비와 친구들 만들기 </string>
    <string name="txt_main_new_product_name2">자석퍼즐 신비아파트3 더블X 합체 고스트 만들기 </string>
    <string name="txt_rank_product_name1">헬로카봇 삼총사 루크</string>
    <string name="txt_rank_product_price1">%s원</string>
    <string name="txt_rank_product_reviewcount">1,000</string>
    <string name="txt_custom_expect">예상</string>
    <string name="txt_expect_evaluate">0.0</string>
    <string name="txt_custom_recommend1">&#160;아이가 좋아해요&#160;</string>
    <string name="txt_custom_recommend2">&#160;자주 검색해요&#160;</string>
    <string name="txt_custom_recommend3">&#160;평가가 좋아요&#160;</string>
    <string name="txt_test_message">&#160;기능 테스트&#160;</string>
    <string name="txt_test_message2">&#160;기능 테스트2&#160;</string>
    <string name="txt_back_message">뒤로 가기</string>
    <string name="txt_rating">평점</string>
    <string name="txt_rating_default">&#160;평점&#160;</string>
    <string name="txt_rank_default">0</string>
    <string name="txt_rank_pricewon">원</string>
    <string name="txt_new_tag">신제품</string>
    <string name="txt_result_null">해당 내용이 없습니다</string>
    <string name="txt_image_null">이미지가 존재하지 않습니다</string>
    <string name="txt_review_null">리뷰가 존재하지 않습니다</string>
    <string name="txt_like_null">좋아요 상품이 존재하지 않습니다</string>
    <string name="txt_search_toy">검색</string>
    <string name="txt_search_keyword_template">\"%s\"</string>
    <string name="txt_search_result_none">&#160;에 대한 검색 결과가 없습니다.</string>
    <string name="txt_search_result_get">&#160;&#160;검색 결과 총&#160;</string>
    <string name="txt_search_result_suffix">&#160;건</string>
    <string name="txt_search_favorite_keyword">인기 검색어</string>
    <string name="txt_search_recently_keyword">최근 검색어</string>
    <string name="txt_order_default">인기순</string>
    <string-array name="array_order_popular">
        <item>인기순</item>
        <item>최신순</item>
        <item>낮은 가격순</item>
        <item>높은 가격순</item>
    </string-array>
    <string name="txt_category_list_title">카테고리 목록 타이틀</string>
    <string name="txt_category_index">카테고리 항목</string>
    <string name="txt_category_noname">오로라월드</string>
    <string name="txt_category_eval_template">&#160;%s</string>
    <string name="txt_goods_info">상품상세</string>
    <string name="txt_goods_info_eval_template">&#160;3.0&#160;</string>
    <string name="txt_goods_info_price_template">%s원</string>
    <string name="txt_goods_info_review">리뷰</string>
    <string name="txt_goods_info_write_review">리뷰작성</string>
    <string name="txt_goods_info_review_like_template">&#160;%s</string>
    <string name="txt_goods_info_review_default">0</string>
    <string name="txt_goods_info_review_date_template">2021.09.01</string>
    <string name="txt_goods_info_reviewer_name">김고객</string>
    <string name="txt_goods_info_eval_5">5점</string>
    <string name="txt_goods_info_eval_4">4점</string>
    <string name="txt_goods_info_eval_3">3점</string>
    <string name="txt_goods_info_eval_2">2점</string>
    <string name="txt_goods_info_eval_1">1점</string>
    <string name="txt_goods_info_percentage_template">%s&#160;\%</string>
    <string name="txt_goods_info_review_photo">\n%s</string>
    <string name="txt_review_write">리뷰 쓰기</string>
    <string name="txt_review_modify">리뷰 수정</string>
    <string name="txt_review_registration">리뷰등록</string>
    <string name="txt_review_evaluate_template">%s점</string>
    <string name="txt_review_eval_total">&#160;\/ 5점</string>
    <string name="txt_review_text_limit">%s / 1,000</string>
    <string name="txt_review_photo_template">\n\n%s/5</string>
    <string name="hint_review_write">리뷰 내용을 입력하세요(1,000자 이내)</string>
    <string name="txt_review_complete">등록이 완료되었습니다.\n</string>
    <string name="btn_review_modify">수정</string>
    <string name="btn_review_delete">삭제</string>
    <string name="txt_photo_title">포토 모아 보기</string>
    <string name="txt_more_info">더보기&#160;</string>
    <string name="txt_review_sample">특가상품 헬로카봇 구급차댄디 옐로우 리뷰입니다. 아이가 엄청 좋아합니다. 친구 로보트장난감보며 부러워 하던 아이를 위해 구입했어요. 마트를 갈까하다가 온라인으로 주문했어요. 온라인 가격이 훨씬 싸더라구요. 마트에서 설득하느라 애좀 먹었습니다^^ 오래 잘 갖고 놀았으면 좋겠네요.</string>
    <string name="txt_like_default">&#160;999</string>
    <string name="txt_main_scroll_up">⋀ 맨위로</string>
    <string name="txt_main_terms">이용약관</string>
    <string name="txt_main_privacy_policy">개인정보처리방침</string>
    <string name="txt_main_certificate_business">사업자정보확인</string>
    <string name="txt_company_info1">오로라월드(주) 대표:홍기선 | 고객센터 : 02 3420 4025</string>
    <string name="txt_company_info2">주소 : 서울특별시 강남구 테헤란로 624 오로라빌딩</string>
    <string name="txt_company_info3">사업자등록번호 : 215&#8211;81&#8211;02803 | 통신판매업신고번호 : 강남&#8211;303</string>
    <string name="txt_copyright">COPYRIGHTⓒ AURORAWORLD CORP,. ALL RIGHTS RESERVED.</string>
    <string name="txt_my_page_sir">%s 님</string>
    <string name="txt_my_page_email">test@gmail.com</string>
    <string name="txt_my_page_like">좋아요</string>
    <string name="txt_my_page_likes">좋아요 목록</string>
    <string name="txt_my_page_review">내가 쓴 리뷰</string>
    <string name="txt_my_page_kid">아이 관리</string>
    <string name="txt_my_page_notice">공지사항</string>
    <string name="txt_my_page_setting">환경설정</string>
    <string name="txt_kids_add">아이 등록</string>
    <string name="txt_kids_add_next">다음</string>
    <string name="hint_kids_nick">아이 애칭 입력</string>
    <string name="txt_kids_nick">애칭</string>
    <string name="txt_kids_gender">아이 성별</string>
    <string name="txt_kids_birth">아이 생년월일</string>
    <string name="txt_kids_favorite_character">좋아하는 캐릭터를 선택해 주세요</string>
    <string name="txt_kids_personality">아이의 성향을 선택 해 주세요</string>
    <string name="txt_kids_person">성향</string>
    <string name="txt_kids_person_template"><u>성향</u></string>
    <string name="txt_kids_favor_char">좋아하는 캐릭터</string>
    <string name="txt_kids_favor_char_count"><u>%s개</u></string>
    <string name="txt_kids_evaluate_toy">평가한 장난감</string>
    <string name="txt_kids_evaluate_template"><u>평균 : %s점 / %S개</u></string>
    <string name="txt_kids_char_3over">3개 이상</string>
    <string name="txt_kids_char_choice1">&#160;선택 해 주세요</string>
    <string name="txt_kids_char_3max">최대 3개</string>
    <string name="txt_kids_char_choice2">까지 선택 해 주세요</string>
    <string name="txt_kids_char_name">캐릭터</string>
    <string name="txt_kids_order_suffix">%s 아이</string>
    <string name="txt_kids_info_change">정보 변경</string>
    <string name="txt_kids_info_delete">삭제</string>
    <string name="txt_kids_delete_confirm">자녀 정보 삭제 </string>
    <string name="txt_kids_delete_notice">자녀 정보를 삭제 하시겠습니까?\n</string>
    <string name="txt_kids_order_sample">첫째</string>
    <string name="txt_kids_nick_sample">장남이</string>
    <string-array name="txt_my_kids_order">
        <item>첫째</item>
        <item>둘째</item>
        <item>셋째</item>
        <item>넷째</item>
        <item>다섯째</item>
        <item>여섯째</item>
        <item>일곱째</item>
        <item>여덟째</item>
        <item>아홉째</item>
        <item>열째</item>
    </string-array>
    <string-array name="txt_kids_char">
        <item>캐릭터 A</item>
        <item>캐릭터 B</item>
        <item>캐릭터 C</item>
        <item>캐릭터 D</item>
        <item>캐릭터 E</item>
        <item>캐릭터 F</item>
        <item>캐릭터 G</item>
        <item>캐릭터 H</item>
        <item>캐릭터 I</item>
        <item>캐릭터 J</item>
        <item>캐릭터 K</item>
    </string-array>
    <string-array name="txt_kids_personal">
        <item>성향 A</item>
        <item>성향 B</item>
        <item>성향 C</item>
        <item>성향 D</item>
        <item>성향 E</item>
        <item>성향 F</item>
        <item>성향 G</item>
    </string-array>
    <string-array name="txt_email_form">
        <item>naver.com</item>
        <item>hanmail.net</item>
        <item>daum.net</item>
        <item>gmail.com</item>
        <item>nate.com</item>
        <item>hotmail.com</item>
        <item>yahoo.co.kr</item>
    </string-array>
    <string name="txt_dlg_today_close">오늘 하루 그만보기</string>
    <string name="txt_dlg_popup_close">닫기</string>
    <string name="txt_dlg_yes">확인</string>
    <string name="txt_dlg_no">취소</string>
    <string name="txt_dlg_introduce">안내</string>
    <string name="txt_dlg_join_terms_confirm">약관에 동의하셔야 합니다.\n</string>
    <string name="txt_dlg_login_title">로그인 안내</string>
    <string name="txt_dlg_logout_title">로그아웃 안내</string>
    <string name="txt_dlg_login_confirm">로그인 후 사용 가능합니다.\n로그인 하시겠습니까?</string>
    <string name="txt_dlg_logout_confirm">로그아웃 하시겠습니까?</string>
    <string name="txt_dlg_not_found_title">로그인 알림</string>
    <string name="txt_dlg_login_form_empty">메일과 비밀번호를 입력해 주세요</string>
    <string name="txt_dlg_not_found_user">등록되어있지 않은 사용자입니다.\n메일 주소를 확인해 주세요.</string>
    <string name="txt_dlg_not_found_pwd">비밀번호가 맞지 않습니다.\n</string>
    <string name="txt_dlg_no_child_select">장난감을 사용한 자녀를\n선택 해 주세요.</string>
    <string name="txt_dlg_no_child_title">자녀 등록 필요</string>
    <string name="txt_dlg_no_child_inform">평가를 위해서는 자녀등록이 요구됩니다.\n[마이페이지] 메뉴에서 자녀 등록을 진행해 주세요</string>
    <string name="txt_dlg_exit_title">종료 안내</string>
    <string name="txt_dlg_exit_confirm">앱을 종료하시겠습니까?\n</string>
    <string name="txt_login">로그인</string>
    <string name="txt_login_auto">자동로그인</string>
    <string name="txt_setting">설정</string>
    <string name="txt_logout">로그아웃</string>
    <string name="txt_alarm">알림 설정</string>
    <string name="txt_push_alarm">푸시 알림 설정</string>
    <string name="txt_night_alarm">야간 알림 (21~08시)</string>
    <string name="txt_information">정보</string>
    <string name="txt_version_info">버전정보</string>
    <string name="txt_version_code">ver 1.0.0</string>
</resources>