<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tVwRankingNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/txt_rank_default"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/iVwRankListProductImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iVwRankListProductImg"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/cd_product_default"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tVwRankingNumber"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tp_prod_a001_thumb01" />

    <TextView
        android:id="@+id/tVwRankListCategoryType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_rank_boy"
        android:textColor="#272727"
        app:layout_constraintBottom_toTopOf="@+id/tVwRankListProductName"
        app:layout_constraintStart_toEndOf="@+id/iVwRankListProductImg"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tVwRankListProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"
        android:text="@string/txt_rank_product_name1"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tVwRankListProductPrice"
        app:layout_constraintStart_toEndOf="@+id/iVwRankListProductImg"
        app:layout_constraintTop_toBottomOf="@+id/tVwRankListCategoryType" />

    <TextView
        android:id="@+id/tVwRankListProductPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/txt_rank_product_price1"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tVwRankListRate"
        app:layout_constraintStart_toEndOf="@+id/iVwRankListProductImg"
        app:layout_constraintTop_toBottomOf="@+id/tVwRankListProductName" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_rank_pricewon"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tVwRankListReviewCount"
        app:layout_constraintStart_toEndOf="@+id/tVwRankListProductPrice"
        app:layout_constraintTop_toBottomOf="@+id/tVwRankListProductName"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tVwRankListRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/txt_rating_default"
        android:textColor="@android:color/holo_red_dark"
        app:drawableStartCompat="@drawable/img_rate_star"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iVwRankListProductImg"
        app:layout_constraintTop_toBottomOf="@+id/tVwRankListProductPrice"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tVwRankListReviewCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_rank_product_reviewcount"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tVwRankListRate"
        app:layout_constraintTop_toBottomOf="@+id/tVwRankListProductPrice"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>