<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="9"
        android:background="#FFFFFF"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="10">

        <LinearLayout
            style="@style/HomeButtonLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="5">

            <ImageButton
                android:id="@+id/iBtnMainHome"
                style="@style/HomeButtonBorderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:background="@android:color/transparent"
                android:contentDescription="@string/cd_main_btn"
                android:focusable="auto"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/btn_main_home" />

            <TextView
                android:id="@+id/tvw_MHome"
                style="@style/HomeButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3.5"
                android:text="@string/btn_home" />
        </LinearLayout>

        <LinearLayout
            style="@style/HomeButtonLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="5">

            <ImageButton
                android:id="@+id/iBtnMainCategory"
                style="@style/HomeButtonBorderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:background="@android:color/transparent"
                android:contentDescription="@string/cd_category_btn"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/btn_main_category" />

            <TextView
                android:id="@+id/tvw_MCategory"
                style="@style/HomeButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3.5"
                android:text="@string/btn_category" />
        </LinearLayout>

        <LinearLayout
            style="@style/HomeButtonLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="5">

            <ImageButton
                android:id="@+id/iBtnMainEvaluate"
                style="@style/HomeButtonBorderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:background="@android:color/transparent"
                android:contentDescription="@string/cd_evaluate_btn"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/btn_main_evaluate" />

            <TextView
                android:id="@+id/tvw_MEvaluate"
                style="@style/HomeButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3.5"
                android:text="@string/btn_evaluate" />
        </LinearLayout>

        <LinearLayout
            style="@style/HomeButtonLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="5">

            <ImageButton
                android:id="@+id/iBtnMainRank"
                style="@style/HomeButtonBorderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:background="@android:color/transparent"
                android:contentDescription="@string/cd_ranking_btn"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/btn_main_rank" />

            <TextView
                android:id="@+id/tvw_MRank"
                style="@style/HomeButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3.5"
                android:text="@string/btn_ranking" />
        </LinearLayout>

        <LinearLayout
            style="@style/HomeButtonLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="5">

            <ImageButton
                android:id="@+id/iBtnMainMypage"
                style="@style/HomeButtonBorderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:background="@android:color/transparent"
                android:contentDescription="@string/cd_my_page_btn"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/btn_main_mypage" />

            <TextView
                android:id="@+id/tvw_Mmypage"
                style="@style/HomeButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3.5"
                android:text="@string/btn_mypage" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>